--- a/gb/23/2/5/n13923214.md
+++ b/gb/23/2/5/n13923214.md
@@ -87,31 +87,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/10/n11176292.md#1" target="_blank">【征文】田园：《资治通鉴》中的传统智慧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917669.md#1">正月冬雷异象 多方示警亡政之兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917512.md#1">生命元神不灭 勿生生沉沦苦海里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916691.md#1">《醉茶志怪》中的瘟神与疫鬼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922868.md#1">【时事军事】北约卫星和远程武器令俄罗斯脊背发凉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922661.md#1">【舞蹈三剑客】7个旅行必备！神韵舞蹈演员巡演必带用品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922698.md#1">【菁英论坛】胡鑫宇案背后的“器官特供基地”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922242.md#1">组图：如糯米团般圆滚滚的小鸟 风靡日本</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922665.md#1">【快讯】美军战斗机击落中共间谍气球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922701.md#1">美击落中共间谍气球 美防长透露决策过程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922643.md#1">周润发登时尚杂志封面 重现《英雄本色》造型</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922098.md#1">金马影后陆小芬重返大银幕 曝40年前珍贵画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922703.md#1">胡歌宣布当爸后首现身 被翻曾预告过年送惊喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922038.md#1">郭书瑶曾考虑转行 上实境秀想学一技之长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921928.md#1">与梁朝伟合体飙演技 郭富城一天换三个造型</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922993.md#1">英男用这招订航班商务舱机位 比经济舱便宜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922185.md#1">5.99%房贷固定利率 对疲软的房市意味着什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922810.md#1">持续慢性胸痛？根源可能不是因为心脏问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921923.md#1">胡萝卜一定要带皮吃？5个烹饪技巧更健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898617.md#1">被称为“大药箱” 这一植物抗流感功效强大</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063213.md#1">【环球直击】挣钱难 大陆青年流行“反向消费”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063212.md#1">【晚间新闻】武大毕业生在美行凶被捕 一教师遇害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063423.md#1">【军事热点】乌军反攻 接触俄军脆弱内层防线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061791.md#1">曾庆红家族企业花样年披露违约负债439亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061857.md#1">国务院部门发新提议 分析：与习想法相左</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061593.md#1">中国两个月近200万人染疫亡？分析：冰山一角</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061824.md#1">简廷芮9月补办婚礼 公开婚照一对儿女都入镜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062572.md#1">“为病重外婆冲喜” 林逸欣1年多前已结婚</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056469.md#1">最简单的养肝秘方 随时随地一招就灵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061952.md#1">专家分享5个习惯 可显着改善大脑健康</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/5/n13923214.htm">【名家专栏】台湾和乌克兰的坦克故事</a></p><hr>
